// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pds views with blocking > blocks record embeds 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": {
        "$type": "app.bsky.embed.record#view",
        "record": {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
              "chat": {
                "allowIncoming": "none",
              },
            },
            "did": "user(2)",
            "handle": "dan.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(3)",
          "embeds": [
            {
              "$type": "app.bsky.embed.record#view",
              "record": {
                "$type": "app.bsky.embed.record#viewBlocked",
                "author": {
                  "did": "user(3)",
                  "viewer": {
                    "blockedBy": false,
                    "blocking": "record(5)",
                  },
                },
                "blocked": true,
                "uri": "record(4)",
              },
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 1,
          "uri": "record(3)",
          "value": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": {
              "$type": "app.bsky.embed.record",
              "record": {
                "cid": "cids(4)",
                "uri": "record(4)",
              },
            },
            "facets": [
              {
                "features": [
                  {
                    "$type": "app.bsky.richtext.facet#mention",
                    "did": "user(0)",
                  },
                ],
                "index": {
                  "byteEnd": 18,
                  "byteStart": 0,
                },
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label",
        },
      ],
      "likeCount": 2,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
        },
        "text": "yoohoo label_me",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "threadContext": {},
  },
}
`;

exports[`pds views with blocking > blocks thread parent 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "parent": {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": {
        "did": "user(2)",
        "viewer": {
          "blockedBy": true,
        },
      },
      "blocked": true,
      "uri": "record(4)",
    },
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": {
          "parent": {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
          "root": {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
        },
        "text": "alice replies to dan",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": [
      {
        "$type": "app.bsky.feed.defs#threadViewPost",
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(3)",
            "handle": "carol.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(4)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [],
          "likeCount": 0,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": {
              "parent": {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
              "root": {
                "cid": "cids(3)",
                "uri": "record(4)",
              },
            },
            "text": "carol replies to alice's reply to dan",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(5)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
        "threadContext": {},
      },
    ],
    "threadContext": {},
  },
}
`;

exports[`pds views with blocking > blocks thread reply 1`] = `
{
  "thread": {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "likeCount": 3,
      "quoteCount": 0,
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "uri": "record(0)",
      "viewer": {
        "bookmarked": false,
        "embeddingDisabled": false,
        "like": "record(4)",
        "repost": "record(3)",
        "threadMuted": false,
      },
    },
    "replies": [
      {
        "$type": "app.bsky.feed.defs#blockedPost",
        "author": {
          "did": "user(2)",
          "viewer": {
            "blockedBy": false,
            "blocking": "record(6)",
          },
        },
        "blocked": true,
        "uri": "record(5)",
      },
      {
        "$type": "app.bsky.feed.defs#threadViewPost",
        "post": {
          "author": {
            "associated": {
              "activitySubscription": {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(3)",
            "displayName": "bobby",
            "handle": "bob.test",
            "labels": [],
            "viewer": {
              "blockedBy": false,
              "following": "record(8)",
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(3)",
          "embed": {
            "$type": "app.bsky.embed.images#view",
            "images": [
              {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(4)",
                "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(4)",
              },
            ],
          },
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": [
            {
              "cid": "cids(3)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label",
            },
            {
              "cid": "cids(3)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label-2",
            },
          ],
          "likeCount": 0,
          "quoteCount": 0,
          "record": {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": {
              "$type": "app.bsky.embed.images",
              "images": [
                {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "image": {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": {
                      "$link": "cids(4)",
                    },
                    "size": 4114,
                  },
                },
              ],
            },
            "reply": {
              "parent": {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
              "root": {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
            },
            "text": "hear that label_me label_me_2",
          },
          "replyCount": 1,
          "repostCount": 0,
          "uri": "record(7)",
          "viewer": {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
        "threadContext": {},
      },
    ],
    "threadContext": {},
  },
}
`;
